fix spacing

--- a/packages/front-end/styles/_bootstrap-theme-overrides.scss
+++ b/packages/front-end/styles/_bootstrap-theme-overrides.scss
@@ -398,7 +398,7 @@ pre {
 
 .c-json-view {
   background-color: var(--surface-background-color-alt) !important;
-  padding: 0px 0px 0px 30px !important;
+  padding: 0px 0px 0px 50px !important;
 }
 
 .c-line-add {
